--- a/index.html
+++ b/index.html
@@ -25,6 +25,78 @@
     <title>Pure Bootstrap Website</title>
   </head>
   <body>
+    <!------Navbar---------->
+    <nav class="navbar navbar-expand-md navbar-light bg-dark">
+      <a href="#" class="navbar-brand"
+        ><i class="fas fa-child text-warning fa-2x"></i
+      ></a>
+      <button
+        type="button"
+        class="navbar-toggler bg-light"
+        data-toggle="collapse"
+        data-target="#nav"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div id="nav" class="collapse navbar-collapse justify-content-between">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a
+              class="nav-link text-light text-uppercase font-weight-bold px-3"
+              href="#"
+              >Home</a
+            >
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link text-light text-uppercase font-weight-bold px-3"
+              href="#"
+              >Skills</a
+            >
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link text-light text-uppercase font-weight-bold px-3 dropdown-toggle"
+              href="#"
+              data-toggle="dropdown"
+              >Projects</a
+            >
+            <div class="dropdown-menu">
+              <a href="#" class="dropdown-item">Project 1</a>
+              <a href="#" class="dropdown-item">Project 2</a>
+              <a href="#" class="dropdown-item">Project 3</a>
+              <a href="#" class="dropdown-item">Project 4</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link text-light text-uppercase font-weight-bold px-3"
+              href="#"
+              >Team</a
+            >
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link text-light text-uppercase font-weight-bold px-3"
+              href="#"
+              >Contact</a
+            >
+          </li>
+        </ul>
+        <form class="form-inline ml-3">
+          <div class="input-group">
+            <input class="form-control" type="text" placeholder="search" />
+            <div class="input-group-append">
+              <button type="button" class="btn">
+                <i class="fas fa-search text-muted"></i>
+              </button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </nav>
+    <!------End of Navbar---------->
+
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
