--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </head>
   <body>
     <!------Navbar---------->
-    <nav class="navbar navbar-expand-md navbar-light bg-dark">
+    <nav class="navbar navbar-expand-md navbar-light bg-dark fixed-top">
       <a href="#" class="navbar-brand"
         ><i class="fas fa-child text-warning fa-2x"></i
       ></a>
