--- a/index.html
+++ b/index.html
@@ -120,6 +120,59 @@
       </div>
     </section>
     <!----End of bunner-->
+
+    <!------Skills-->
+    <section class="bg-light p-5">
+      <div class="container-fuild">
+        <!------title-->
+        <div class="row">
+          <div class="col text-center mb-3">
+            <h1 class="text-warning display-2">Skills</h1>
+            <p class="lead text-secondary">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta
+              eius a sapiente ipsum ea laborum adipisci laboriosam doloribus
+              quia, corrupti odit ?
+            </p>
+          </div>
+        </div>
+        <!------End of title-->
+
+        <div class="row text-center">
+          <div class="col-lg-4 col-sm-10 mx-auto mb-5">
+            <i class="fas fa-desktop fa-6x text-warning mb-3"></i>
+            <h1 class="text-secondary ">Development</h1>
+            <p class="text-muted my-4">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero
+              autem quisquam quis et dolore, blanditiis dignissimos, est tenetur
+              culpa numquam ab incidunt
+            </p>
+            <a href="" class="btn btn-outline-warning">Learn more</a>
+          </div>
+
+          <div class="col-lg-4 col-sm-10 mx-auto mb-5">
+            <i class="fas fa-edit fa-6x text-warning mb-3"></i>
+            <h1 class="text-secondary ">Design</h1>
+            <p class="text-muted my-4">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero
+              autem quisquam quis et dolore, blanditiis dignissimos, est tenetur
+              culpa numquam ab incidunt
+            </p>
+            <a href="" class="btn btn-outline-warning">Learn more</a>
+          </div>
+          <div class="col-lg-4 col-sm-10 mx-auto mb-5">
+            <i class="fas fa-cogs fa-6x text-warning mb-3"></i>
+            <h1 class="text-secondary ">Creativity</h1>
+            <p class="text-muted my-4">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero
+              autem quisquam quis et dolore, blanditiis dignissimos, est tenetur
+              culpa numquam ab incidunt
+            </p>
+            <a href="" class="btn btn-outline-warning">Learn more</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!------End of Skills-->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
