team-Section Completed

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     <!------End of Skills-->
 
     <!-------Porject--------->
-    <div class="section p-5">
+    <section class="section p-5">
       <div class="container-fluid">
         <!------title-->
         <div class="row">
@@ -224,8 +224,107 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
     <!-------End of Porject--------->
+    <!---Team-->
+    <section class="p-sm-5 p-2 bg-secondary">
+      <div class="container-fluid">
+        <!------title-->
+        <div class="row">
+          <div class="col text-center mb-3">
+            <h1 class="text-warning display-2">Team</h1>
+            <p class="lead text-light">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta
+              eius a sapiente ipsum ea laborum adipisci laboriosam doloribus
+              quia, corrupti odit ?
+            </p>
+          </div>
+        </div>
+        <!------End of title-->
+
+        <div class="row">
+          <div class="col-lg-4 col-sm-10 mx-auto mb-4">
+            <div class="card">
+              <img src="./images/kid1.jpg" alt="" class="card-img-top" />
+              <div class="card-body">
+                <div class="card-title">
+                  <h3 class="text-muted">Michael</h3>
+                </div>
+                <div class="card-subtitle">
+                  <p class="lead text-secondary">
+                    Lorem ipsum dolor sit amet.
+                  </p>
+                </div>
+                <div class="text-right">
+                  <a href="#"
+                    ><i class="fab fa-facebook 2x mx-2 text-primary"></i
+                  ></a>
+                  <a href="#"
+                    ><i class="fab fa-twitter 2x mx-2 text-info"></i
+                  ></a>
+                  <a href="#"
+                    ><i class="fab fa-youtube 2x mx-2 text-danger"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-10 mx-auto mb-4">
+            <div class="card">
+              <img src="./images/kid2.jpg" alt="" class="card-img-top" />
+              <div class="card-body">
+                <div class="card-title">
+                  <h3 class="text-muted">Jin-Yang</h3>
+                </div>
+                <div class="card-subtitle">
+                  <p class="lead text-secondary">
+                    Lorem ipsum dolor sit amet.
+                  </p>
+                </div>
+                <div class="text-right">
+                  <a href="#"
+                    ><i class="fab fa-facebook 2x mx-2 text-primary"></i
+                  ></a>
+                  <a href="#"
+                    ><i class="fab fa-twitter 2x mx-2 text-info"></i
+                  ></a>
+                  <a href="#"
+                    ><i class="fab fa-youtube 2x mx-2 text-danger"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-10 mx-auto mb-4">
+            <div class="card">
+              <img src="./images/kid3.jpg" alt="" class="card-img-top" />
+              <div class="card-body">
+                <div class="card-title">
+                  <h3 class="text-muted">Anna</h3>
+                </div>
+                <div class="card-subtitle">
+                  <p class="lead text-secondary">
+                    Lorem ipsum dolor sit amet.
+                  </p>
+                </div>
+                <div class="text-right">
+                  <a href="#"
+                    ><i class="fab fa-facebook 2x mx-2 text-primary"></i
+                  ></a>
+                  <a href="#"
+                    ><i class="fab fa-twitter 2x mx-2 text-info"></i
+                  ></a>
+                  <a href="#"
+                    ><i class="fab fa-youtube 2x mx-2 text-danger"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!---End of Team-->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
