Section progress Completed

--- a/index.html
+++ b/index.html
@@ -325,6 +325,53 @@
       </div>
     </section>
     <!---End of Team-->
+
+    <!---Progress-->
+    <section class="p-5">
+      <div class="container-fluid">
+        <!------title-->
+        <div class="row">
+          <div class="col text-center mb-3">
+            <h1 class="text-warning display-2">Progress</h1>
+            <p class="lead text-secondary">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta
+              eius a sapiente ipsum ea laborum adipisci laboriosam doloribus
+              quia, corrupti odit ?
+            </p>
+          </div>
+        </div>
+        <!------End of title-->
+        <div class="row justify-content-center">
+          <div class="col-lg-6 col-sm-10 text-secondary">
+            <h2>HTML</h2>
+            <div class="progress bg-secondary mb-3">
+              <div class="progress-bar" style="width:50%">
+                50%
+              </div>
+            </div>
+            <h2>CSS</h2>
+            <div class="progress  mb-3">
+              <div class="progress-bar bg-danger" style="width:70%">
+                70%
+              </div>
+            </div>
+            <h2>JAVASCRIPT</h2>
+            <div class="progress bg-secondary  mb-3">
+              <div class="progress-bar bg-warning " style="width:90%">
+                90%
+              </div>
+            </div>
+            <h2>BOOTSTRAP</h2>
+            <div class="progress bg-secondary mb-3">
+              <div class="progress-bar bg-success" style="width:95%">
+                95%
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!---End of Progress-->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
