--- a/index.html
+++ b/index.html
@@ -372,6 +372,53 @@
       </div>
     </section>
     <!---End of Progress-->
+
+    <!------Contact-->
+    <section class="p-5 bg-light">
+      <div class="container-fluid">
+        <!------title-->
+        <div class="row">
+          <div class="col text-center mb-3">
+            <h1 class="text-warning display-2">Contact Us</h1>
+            <p class="lead text-secondary">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta
+              eius a sapiente ipsum ea laborum adipisci laboriosam doloribus
+              quia, corrupti odit ?
+            </p>
+          </div>
+        </div>
+        <!------End of title-->
+
+        <div class="row justify-content-center">
+          <div class="col-lg-6 col-md-8 col-sm-10">
+            <div class="text-center text-secondary">
+              <h2>Got Question</h2>
+              <p>Stay Connected</p>
+            </div>
+
+            <form class="text-muted">
+              <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" class="form-control" id="name" />
+              </div>
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input type="text" class="form-control" id="email" />
+              </div>
+
+              <div class="form-group">
+                <label for="message">Message</label>
+                <textarea class="form-control" id="message" rows="3"></textarea>
+              </div>
+              <button type="submit" class="btn btn-block btn-outline-warning">
+                Submit Question
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!------End of Contact-->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
