--- a/index.html
+++ b/index.html
@@ -419,6 +419,37 @@
       </div>
     </section>
     <!------End of Contact-->
+    <!------footer-->
+    <footer class="bg-secondary">
+      <div class="container">
+        <div class="row">
+          <div class="col text-center">
+            <h1 class="text-white font-weight-light text-capitalize p-3">
+              pure Bootstrap Practice
+            </h1>
+            <h3 class="text-light font-weight-light font-italic mb-3">
+              Lorem ipsum dolor sit amet.
+            </h3>
+            <div class="py-2">
+              <a href="#">
+                <i class="fab fa-facebook fa-2x text-primary mx-3"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-google fa-2x text-danger mx-3"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-twitter fa-2x text-info mx-3"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-youtube fa-2x text-danger mx-3"></i>
+              </a>
+            </div>
+            <p class="text-light py-4 m-0">$copy;copyright 2019</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!------End of footer-->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
